fix overlapping

--- a/public/less/chat/ChatPanel.less
+++ b/public/less/chat/ChatPanel.less
@@ -12,6 +12,8 @@
 	float: left;
 	width: 220px;
 
+	z-index: 2;
+
 	.chat-panel-background-wrapper {
 		//height: 68px;
 		overflow: hidden;
